# plotui

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/plotui-core/: Cargo.toml
crates/plotui-core/src/: font.rs  lib.rs  ticks.rs
crates/plotui-core/tests/: render.rs
crates/plotui-protocol/: Cargo.toml
crates/plotui-protocol/src/: diacritics.rs  lib.rs
crates/plotui-protocol/tests/: protocol.rs
crates/plotui-py/: Cargo.toml
crates/plotui-py/src/: lib.rs
examples/: raw_demo.py  textual_demo.py  textual_graph.py
python/plotui/: __init__.py  textual.py
tests/: test_plotui.py  test_textual_widget.py
